--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <style id="markdown-theme" type="text/css"></style>
     <style id="code-theme" type="text/css"></style>
     <style id="font-theme" type="text/css"></style>
-    <title>让微信排版变Nice</title>
+    <title>Anlife 公众号编辑器</title>
   </head>
 
   <body>
